--- a/index.html
+++ b/index.html
@@ -1,12 +1,232 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>HTML Academy: Девайс</title>
+    </head>
+        <body>
+            <header class="main-header">
+                <div class="container">
+                    <div class="header-logo">
+                        <a href="#"><img src="#" width="163" height="35" alt="device"></a>
+                    </div>
+                    <div class="user-block">
+                        <form class="user-search" action="https://echo.htmlacademy.ru" method="get" >
+                            <input type="text" name="search" value="" placeholder="Поиск по сайту"> 
+                            <button class="btn" type="submit">Поиск</button>
+                        </form>
+                        <a class="login" href="#">Войти</a>
+                        <a class="сompare" href="#">Сравнить</a> 
+                        <a class="Basket" href="#">Корзина</a>
+                    </div>
+                    <nav class="main-nav">
+                        <ul>
+                            <li><a href="#">Каталог товаров</a>
+                                    <ul class="catalog">
+                                        <li><a href="#">Виртуальная реальность</a></li>
+                                        <li><a href="#">Фитнес-браслеты</a></li>
+                                        <li><a href="#">Квардрокоптеры</a></li>
+                                        <li><a href="#">Моноподы для селфи</a></li>
+                                        <li><a href="#">Умные часы</a></li>
+                                        <li><a href="#">Экшн-камеры</a></li>        
+                                    </ul>
+                            </li>
+                            <li><a href="#">Доставка</a></li>
+                            <li><a href="#">Гарантия</a></li>
+                            <li><a href="#">Контакты</a></li>
+                        </ul>
+                    </nav>
+                </div>               
+            </header>
+            <div class="slider">
+                <div class="container">
+                    <input type="radio" id="btn-1" name="toggle" checked>
+                    <input type="radio" id="btn-2" name="toggle">
+                    <input type="radio" id="btn-3" name="toggle">
+                    <div class="slider-controls">
+                        <label for="btn-1"></label>
+                        <label for="btn-2"></label>
+                        <label for="btn-3"></label>
+                    </div>
+                    <div class="slider-inner">
+                        <div class="slide1">
+                            <div class="slide-image">
+                                <img src="#" width="384" height="486" alt="Монопод для селфи">
+                            </div>
+                            <div class="slide-feature">
+                                <span>01</span>
+                                <h2>Делай селфи,<br> как Бен Стиллер</h2>
+                                <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длсной и весом всего 5 килограмм.</p>
+                                <a class="btn" href="#">Подробнее</a>
+                                <table>
+                                    <tr>
+                                        <th>8,5 м</th>
+                                        <th>5 кг</th>
+                                        <th>Карбон</th>
+                                    </tr>
+                                    <tr>
+                                        <td>Длина палки</td>
+                                        <td>Вес палки</td>
+                                        <td>Материал</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-image">
+                                <img src="#" width="345" height="485" alt="Фитнес-браслет">
+                            </div>
+                            <div class="slide-feature">
+                                <span>02</span>
+                                <h2>Худеем<br> правильно!</h2>
+                                <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету</p>
+                                <a class="btn" href="#">Подробнее</a>
+                                <table>
+                                    <tr>
+                                            <th>48 часов</th>
+                                    </tr>
+                                    <tr>
+                                        <td>Без подзарядки</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="slide3">
+                            <div class="slide-image">
+                                <img src="#" width="526" height="334" alt="Квадрокоптер">
+                            </div>
+                            <div class="slide-feature">
+                                <span>03</span>
+                                <h2>Порхает как бабочка,<br>жалит как пчела!</h2>
+                                <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+                                <a class="btn" href="#">Подробнее</a>
+                                <table>
+                                    <tr>
+                                        <th>800 м</th>
+                                        <th>Дальность полета</th>
+                                    </tr>
+                                    <tr>
+                                        <td>50 м</td>
+                                        <td>Радиус поражения</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <section class="features">
+                <div class="container">
+                    <ul>
+                        <li class="feature-item item-1">
+                            <a href="#">Виртуальная реальность</a>
+                        </li>
+                        <li class="feature-item item-2">
+                            <a href="#">Моноподы для селфи</a>
+                        </li>
+                        <li class="feature-item item-3">
+                            <a href="#">Экшн-камеры</a>
+                        </li>
+                        <li class="feature-item item-4">
+                            <a href="#">Фитнес-браслеты</a>
+                        </li>
+                        <li class="feature-item item-5">
+                            <a href="#">Умные часы</a>
+                        </li>
+                        <li class="feature-item item-6">
+                            <a href="#">Квадрокоптеры</a>
+                        </li>
+                    </ul>
+                </div>     
+            </section>
+            <div class="services-slider">
+                <div class="container">
+                    <input type="radio" id="btn-1" name="toggle" checked>
+                    <input type="radio" id="btn-2" name="toggle">
+                    <input type="radio" id="btn-3" name="toggle">
+                    <div class="services-controls">
+                        <label for="btn-1">Доставка</label>
+                        <label for="btn-2">Гарантия</label>
+                        <label for="btn-3">Кредит</label>
+                    </div>
+                    <div class="services-inner">
+                        <div class="delivery">
+                            <h2>Доставка</h2>
+                            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+                            <img src="#" width="136" height="164">
+                        </div>
+                        <div class="warranty">
+                            <h2>Гарантия</h2>
+                            <p>Если из-за возгарания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+                            <img src="#" width="171" height="195">
+                        </div>
+                        <div class="credit">
+                            <h2>Кредит</h2>
+                            <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+                            <img src="#" width="156" height="188">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="logotypes">
+                <div class="container">
+                    <a class="logo dji" href="http://www.dji.com/">dji</a>
+                    <a class="logo sp-gadgets" href="https:www.sp-gadgets.com">sp-gadgets</a> 
+                    <a class="logo go-pro" href="https://gopro.com">go-pro</a>
+                    <a class="logo vive" href="https://www.vive.com">vive</a>
+                </div>
+            </div>
+            <div class="index-content">
+                <div class="container">
+                    <div class="index-content-left">
+                        <h2>О нас</h2>
+                        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+                        <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+                        <ul>
+                            <li>Даловые Линии</li>
+                            <li>Автотрейдинг</li>
+                            <li>ЖилДорЭкспедиция</li>
+                        </ul>
+                        <a class="btn" href="#">Подробнее о нас</a>
+                    </div>
+                    <div class="index-content-right">
+                        <h2>Контакты</h2>
+                        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+                        <a class="btn" href="#">Напишите нам</a>                   
+                    </div>
+                </div>
+            </div>
+            <footer class="main-footer">
+                <div class="container">  
+                    <div class="footer-top">
+                        <div class="footer-logo">
+                            <a href="#"><img src="#" width="163" height="35" alt="device"></a>
+                        </div>
+                        <a class="login" href="#">Войти</a>
+                        <a class="сompare" href="#">Сравнить</a> 
+                        <a class="Basket" href="#">Корзина</a>
+                    </div>
+                    <div class="footer-middle">
+                        <p>г. Москва, ул. Строителей, 15</p>
+                        <nav class="footer-nav">
+                            <ul>
+                                <li><a href="#">Доставка</a></li>
+                                <li><a href="#">Гарантия</a></li>
+                                <li><a href="#">Контакты</a></li>
+                            </ul>
+                        </nav>
+                        <p>Тел.: +7 (495) 495-95-95</p>
+                    </div>
+                    <div class="footer-bottom">
+                        <div class="border"></div>
+                        <div class="footer-social">
+                            <a class="social-btn fb" href="https://facebook.com/">Фейсбук</a>
+                            <a class="social-btn inst" href="https://instagram.com/">Инстаграм</a>
+                            <a class="social-btn tw" href="https://twitter.com/">Твиттер</a>
+                        </div>
+                        <a class="htmlacademy" href="https://htmlacademy.ru/"><img src="#" width="27" height="34" alt="htmlacademy"></a>
+                    </div>
+                </div>
+            </footer>
+        </body>
 </html>
