--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                     </div>
                     <div class="user-block">
                         <form class="user-search" action="https://echo.htmlacademy.ru" method="get" >
-                            <p><input type="search" name="" placeholder="Поиск по сайту"> 
-                            <input type="submit" value="Найти"></p>
+                            <input type="search" name="" placeholder="Поиск по сайту"> 
+                            <input type="submit" value="Найти">
                         </form>
                         <ul>    
                             <li><a class="login" href="#">Войти</a></li>
@@ -23,12 +23,12 @@
                     </div>
                     <nav class="main-nav">
                         <ul>
-                            <li><a href="#">Каталог товаров</a>
+                            <li><a href="catalog.html">Каталог товаров</a>
 								<ul class="catalog">
 									<li><a href="#">Виртуальная реальность</a></li>
 									<li><a href="#">Фитнес-браслеты</a></li>
 									<li><a href="#">Квардрокоптеры</a></li>
-									<li><a href="#">Моноподы для селфи</a></li>
+									<li><a href="catalog.html">Моноподы для селфи</a></li>
 									<li><a href="#">Умные часы</a></li>
 									<li><a href="#">Экшн-камеры</a></li>        
 								</ul>
