--- a/catalog.html
+++ b/catalog.html
@@ -89,7 +89,7 @@
 				<section class="sorting">
 					<header class="sorting-header">
 						<h3>Сортировка:</h3>
-						<ul sorting-option>
+						<ul class="sorting-option">
 							<li class="by-price"><a href="#">По цене</a></li>
 							<li class="by-type"><a href="#">По типу</a></li>
 							<li class="by-popular"><a href="#">По пулярности</a></li>
