--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="user-block">
                         <form class="user-search" action="https://echo.htmlacademy.ru" method="get" >
-                            <input type="search" name="" placeholder="Поиск по сайту"> 
+                            <input type="search" name="search" placeholder="Поиск по сайту"> 
                             <input type="submit" value="Найти">
                         </form>
                         <ul>    
@@ -42,9 +42,9 @@
             </header>
             <div class="slider">
                 <div class="container">
-                    <input type="radio" id="btn-1" name="toggle" checked>
-                    <input type="radio" id="btn-2" name="toggle">
-                    <input type="radio" id="btn-3" name="toggle">
+                    <input type="radio" id="slider-btn-1" name="toggle" checked>
+                    <input type="radio" id="slider-btn-2" name="toggle">
+                    <input type="radio" id="slider-btn-3" name="toggle">
                     <div class="slider-controls">
                         <label for="btn-1"></label>
                         <label for="btn-2"></label>
@@ -170,7 +170,7 @@
             <section class="logotypes">
                 <div class="container">
                     <a class="logo dji" href="http://www.dji.com/"><img src="#" width="260" height="100" alt="dji"></a>
-                    <a class="logo sp-gadgets" href="https:www.sp-gadgets.com"><img src="#" width="260" height="100" alt="sp-gadgets"></a> 
+                    <a class="logo sp-gadgets" href="https://www.sp-gadgets.com"><img src="#" width="260" height="100" alt="sp-gadgets"></a> 
                     <a class="logo go-pro" href="https://gopro.com"><img src="#" width="260" height="100" alt="lj-pro"></a>
                     <a class="logo vive" href="https://www.vive.com"><img src="#" width="260" height="100" alt="vive"></a>
                 </div>
@@ -191,7 +191,7 @@
                     <div class="contacts">
                         <h2>Контакты</h2>
                         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-                        <a href="#"><img class="map" src="#" width="560" height="222"></a>  
+                        <a href="#"><img class="map" src="#" width="560" height="222" alt="Я карта"></a>  
                         <a class="btn" href="#">Напишите нам</a>
                     </div>
                 </div>
