--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
                         <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
                         <ul>
-                            <li>Даловые Линии</li>
+                            <li>Деловые Линии</li>
                             <li>Автотрейдинг</li>
                             <li>ЖилДорЭкспедиция</li>
                         </ul>
